# WaveshareRLCD-2

./: .gitignore  CMakeLists.txt  README.md  build_output.txt  sdkconfig.defaults
.cache/clangd/index/: BMA423Config.h.4A32A1787F27EBDA.idx  BMA423Constants.h.A23E2E56DB3C4E42.idx  BoschParseBase.hpp.C1EFB7F405A5F4D1.idx  BoschParseCallbackManager.hpp.1AF482B0FC7F296A.idx  BoschParseStatic.cpp.5257C0E5A340F781.idx  BoschParseStatic.hpp.BB4A8E5F3B6123B4.idx  BoschPhySensorInfo.hpp.9DA9ED29F7ECB77A.idx  BoschSensorControl.hpp.B053B1E314F416D8.idx  BoschSensorID.hpp.F2D5FDACE698EE57.idx  BoschSensorInfo.hpp.5ADC15CB322D3E5B.idx  CST9xxConstants.h.1E310C9CF5F204D1.idx  DevicesPins.h.B1A346785DF0C257.idx  GT9895Constants.h.42EF2E98F444CA1F.idx  PCF85063Constants.h.817DC040CA726F57.idx  PCF8563Constants.h.2038D82DCCD0CB49.idx  SensorBHI260AP.cpp.77AFEDF4E7C5C7C4.idx  SensorBHI260AP.hpp.115B2DF0B9DF84F7.idx  SensorBHI260AP_Klio.cpp.D56FB2D2C07DBD3D.idx  SensorBHI260AP_Klio.hpp.DD48B13921884837.idx  SensorBMA423.cpp.A1F97164967C4D7E.idx  SensorBMA423.hpp.8B8AE863D1EDECC7.idx  SensorCommBase.hpp.1C2A13956F8ECEC8.idx  SensorCommCustom.hpp.797362C25B96B0EB.idx  SensorCommCustomHal.hpp.C2615C2AE14B277E.idx  SensorCommDebug.cpp.8E1985D7936460B4.idx  (+718 more)
components/app_bsp/: CMakeLists.txt  ble_scan_bsp.c  esp_wifi_bsp.c  esp_wifi_bsp.h  secrets.h.example  sntp_bsp.c  sntp_bsp.h
components/port_bsp/: CMakeLists.txt
components/ui_bsp/: CMakeLists.txt
components/ui_bsp/custom/: dashboard_screen.c  dashboard_screen.h  lv_conf_ext.h  seven_seg.c  seven_seg.h
components/user_app/: CMakeLists.txt  logo_fetcher.c  logo_fetcher.h  sports_config.h  sports_scores.c  sports_scores.h  user_app.cpp
